# aozora-flavored-markdown-epub

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE-MIT  NOTICE  README.md  SECURITY.md  _typos.toml  clippy.toml  committed.toml  deny.toml  docker-compose.yml  lefthook.yml  mise.toml  rust-toolchain.toml  rustfmt.toml
.config/mise/: config.toml
.github/workflows/: ci.yml
crates/afm-epub/: Cargo.toml
crates/afm-epub-cli/: Cargo.toml
crates/afm-epub-cli/src/: main.rs
crates/afm-epub/assets/: afm.css
crates/afm-epub/src/: compose.rs  discover.rs  error.rs  lib.rs  package.rs  render.rs
crates/aozora-flavored-markdown-epub/: Cargo.toml
crates/aozora-flavored-markdown-epub-cli/: Cargo.toml
crates/aozora-flavored-markdown-epub-cli/src/: main.rs
crates/aozora-flavored-markdown-epub/src/: compose.rs  discover.rs  package.rs  render.rs
crates/aozora-flavored-markdown-epub/src/snapshots/: aozora_flavored_markdown_epub__compose__tests__nav_xhtml_snapshot.snap  aozora_flavored_markdown_epub__compose__tests__package_opf_snapshot.snap
crates/aozora-flavored-markdown-epub/tests/: build_epub.rs
crates/aozora-flavored-markdown-epub/tests/common/: mod.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: ADR_INDEX.md
docs/adr/: 0001-consume-afm-via-git-tag.md  0002-docker-only-execution.md  0003-consume-aozora-flavored-markdown-from-crates-io.md
examples/sample/: book.toml
examples/sample/manuscript/: 001-prologue.md  002-chapter-1.md
