[workspace]
resolver = "3"
members  = [
    "crates/afm-epub",
    "crates/afm-epub-cli",
    "crates/xtask",
]

[workspace.package]
version       = "0.1.0"
edition       = "2024"
rust-version  = "1.95.0"
license       = "Apache-2.0 OR MIT"
description   = "EPUB3 generator for Aozora Flavored Markdown (afm)"
repository    = "https://github.com/P4suta/afm-epub"
homepage      = "https://github.com/P4suta/afm-epub"
authors       = ["afm-epub contributors"]
readme        = "README.md"
keywords      = ["epub", "epub3", "markdown", "aozora", "japanese"]
categories    = ["text-processing", "command-line-utilities"]

[workspace.lints.rust]
unsafe_code      = "forbid"
non_ascii_idents = "deny"

missing_debug_implementations = "warn"
missing_copy_implementations  = "warn"
trivial_casts                 = "warn"
trivial_numeric_casts         = "warn"
unused_import_braces          = "warn"
dead_code                     = "deny"

[workspace.lints.clippy]
pedantic         = { level = "warn", priority = -1 }
nursery          = { level = "warn", priority = -1 }
cargo            = { level = "warn", priority = -1 }
# Project-tightened individual lints
cognitive_complexity = "warn"
too_many_arguments   = "warn"
too_many_lines       = "warn"
# Transitive duplicates from the aozora/comrak graph; upstream-driven.
multiple_crate_versions = "allow"

[workspace.dependencies]
# afm-markdown: the single entry point `render_to_string` that turns each
# manuscript source into HTML. rev is an intentional pin; bump on an afm sync.
afm-markdown    = { version = "0.4.0", git = "https://github.com/P4suta/afm.git", rev = "bedbec125a3af4452d102393d4acf8223aa7d0a2" }
# aozora-encoding: SJIS input decoding; afm-markdown does not re-export it.
aozora-encoding = { version = "0.4.1", git = "https://github.com/P4suta/aozora.git", rev = "a53c632b1d1be4bfcbce7de010ab5b0843e98cc0" }

# CLI
clap      = { version = "4", features = ["derive", "wrap_help"] }
anyhow    = "1"
miette    = { version = "7", features = ["fancy"] }
thiserror = "2"
serde     = { version = "1", features = ["derive"] }
toml      = "1.1"

# EPUB output
quick-xml = { version = "0.39", features = ["serialize"] }
zip       = { version = "5", default-features = false, features = ["deflate"] }
uuid      = { version = "1", features = ["v4"] }
chrono    = { version = "0.4", features = ["serde"] }

# Tests
pretty_assertions = "1"
insta             = { version = "1", features = ["yaml", "ron", "filters"] }
proptest          = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Local dev: uncomment to point at a sibling working copy.
# [patch."https://github.com/P4suta/afm"]
# afm-markdown = { path = "../afm/crates/afm-markdown" }
