[package]
name          = "aozora-flavored-markdown-epub-cli"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
description   = "CLI front-end for the aozora-flavored-markdown-epub library"
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = ["command-line-utilities"]

[lints]
workspace = true

[[bin]]
name = "aozora-flavored-markdown-epub"
path = "src/main.rs"

[dependencies]
aozora-flavored-markdown-epub = { version = "0.1.0", path = "../aozora-flavored-markdown-epub" }
clap      = { workspace = true }
miette    = { workspace = true }
anyhow    = { workspace = true }

[dev-dependencies]
tempfile  = "3"
