[package]
name          = "aozora-flavored-markdown-epub"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
description   = "Library API for converting Aozora Flavored Markdown into an EPUB3 package"
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }

[lints]
workspace = true

[dependencies]
aozora-flavored-markdown = { workspace = true }
aozora-encoding          = { workspace = true }
miette          = { workspace = true }
thiserror       = { workspace = true }
serde           = { workspace = true }
toml            = { workspace = true }
quick-xml       = { workspace = true }
zip             = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta             = { workspace = true }
proptest          = { workspace = true }
tempfile          = "3"
zip               = { workspace = true }
