[package]
name          = "xtask"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
description   = "afm-epub developer automation (publish-to-publish, ADR scaffold, …)"
authors       = { workspace = true }
publish       = false

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap   = { workspace = true }

[dev-dependencies]
tempfile = "3"
